--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_PUBLIC_URL=https://dukuh-gumbeng.netlify.app
+# REACT_APP_PUBLIC_URL=https://dukuh-gumbeng.netlify.app
+REACT_APP_PUBLIC_URL=http://localhost:3000
