update deploy env

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_PUBLIC_URL=https://dukuh-kuwon-lor.netlify.app
-REACT_APP_PUBLIC_URL=http://localhost:3000
+REACT_APP_PUBLIC_URL=https://kuwon-lor.netlify.app/
+# REACT_APP_PUBLIC_URL=http://localhost:3000
